-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12, 5.13, 5.14.0
-
-
d7d40469b5bfad2cc1693ef663864d2b15d59687 (qt/qtwebengine/5.14) 2f56fd4a6b9b6f806334ba64b3689151a78d1d90 (qt/qtwebengine/5.12)
QWebEnginePage::Back/Forward button doesn't become enabled when <frame>/<iframe> is updated.
How to reproduce :
1. Run the attached sample code (QTBUG81512.zip) with the parameter “test\frame\index.html”
2. Click one of the links on the left side. e.g. "right2" -> In the right view, the frame is switched to right2.
Expected behavior:
Back button in the menu bar becomes green and enabled.
Actual behavior
The button stays gray and disabled.
The button works when
- Click the link "Qt" on the left side. This enables to trace all the action history up to the beginning. That is, the right side changes Qt -> right2 -> right1
- Click right mouse on the left side, This shows a menu where the back button is enabled. ( See webEngineHistory.png )
The same thing can be tested for <iframe> with the parameter "test\iframe\index.html"
| For Gerrit Dashboard: QTBUG-81521 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 287388,2 | Update navigation actions when load finishes in a subframe | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 287446,4 | Update navigation actions when load finishes in a subframe | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |